--- a/index.html
+++ b/index.html
@@ -6,9 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css">
-    <title>figma</title>
+    <title>Сделай шаг к выздоровлению</title>
 </head>
 <body>
-<p>test</p>
+
+    <div class="form">
+
+        <span class="styleFont_1 Reduslim">Reduslim</span>
+        <span class="styleFont_1 ECO">ECO</span>
+
+        <div class="ellipse_7"></div>
+        <div class="ellipse_6"></div>
+        <!-- <div id="img_2"></div> -->
+
+        <img id="img_2" src="img/image_2.png" alt="изображение">
+
+        <div class="leftRight">
+
+            <div class="left"></div>
+
+            <div class="right">
+                <div id="rect_2"><p>Сделай шаг к<br/> выздоровлению</p></div>
+            </div>
+
+        </div>
+
+    </div>
+
 </body>
 </html>
