--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
 
             <div class="right">
                 <div id="rect_2"><p>Сделай шаг к<br/> выздоровлению</p></div>
+                <div class="contacts">
+
+                    <form>
+                        <fieldset>
+                            <p class="font_2">ВАШЕ <span>ИМЯ</span></p>
+                            <input type="text" value="Алексей">
+                            <p class="font_2">ВАШ <span>ТЕЛЕФОН</span></p>
+                            <input type="text" value="+7 (923) 456 78-90">
+                        </fieldset>
+                    </form>
+
+                </div>
             </div>
 
         </div>
