--- a/index.html
+++ b/index.html
@@ -10,35 +10,40 @@
 </head>
 <body>
 
-    <div class="form">
-
-        <span class="styleFont_1 Reduslim">Reduslim</span>
-        <span class="styleFont_1 ECO">ECO</span>
+    <div class="wrapper">
 
         <div class="ellipse_7"></div>
         <div class="ellipse_6"></div>
         <!-- <div id="img_2"></div> -->
 
-        <img id="img_2" src="img/image_2.png" alt="изображение">
+
 
         <div class="leftRight">
 
-            <div class="left"></div>
+            <div class="left">
+                <span class="styleFont_1 Reduslim">Reduslim</span>
+                <span class="styleFont_1 ECO">ECO</span>
+                <img id="img_2" src="img/image_2.png" alt="изображение">
+            </div>
 
             <div class="right">
-                <div id="rect_2"><p>Сделай шаг к<br/> выздоровлению</p></div>
-                <div class="contacts">
 
-                    <form>
-                        <fieldset>
-                            <p class="font_2">ВАШЕ <span>ИМЯ</span></p>
-                            <input type="text" value="Алексей">
-                            <p class="font_2">ВАШ <span>ТЕЛЕФОН</span></p>
-                            <input type="text" value="+7 (923) 456 78-90">
-                        </fieldset>
-                    </form>
-
+                <div id="rect_2"><p>Сделай шаг к<br/> выздоровлению</p>
                 </div>
+
+                <form id="contacts">
+                    <fieldset>
+
+                        <p class="font_2">ВАШЕ <span>ИМЯ</span></p>
+                        <input type="text" name="" value="">
+
+                        <p class="font_2">ВАШ <span>ТЕЛЕФОН</span></p>
+                        <input type="text" value="+7 (923) 456 78-90">
+
+                    </fieldset>
+                </form>
+
+
             </div>
 
         </div>
