--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="ellipse_7"></div>
         <div class="ellipse_6"></div>
-        
+        <!-- <div id="img_2"></div> -->
 
         <img id="img_2" src="img/image_2.png" alt="изображение">
 
