--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
             <div class="left"></div>
 
             <div class="right">
-                <div id="rect_2"><p>Сделай шаг к<br/> выздоровлению</p></div>
-                <div class="contacts">
+                <!-- <div id="rect_2"><p>Сделай шаг к<br/> выздоровлению</p></div> -->
 
                     <form>
                         <fieldset>
@@ -38,7 +37,7 @@
                         </fieldset>
                     </form>
 
-                </div>
+
             </div>
 
         </div>
