--- a/index.html
+++ b/index.html
@@ -15,21 +15,23 @@
         <span class="styleFont_1 Reduslim">Reduslim</span>
         <span class="styleFont_1 ECO">ECO</span>
 
-        <div class="ellipse_7"></div>
+
         <div class="ellipse_6"></div>
-        <!-- <div id="img_2"></div> -->
+
 
         <img id="img_2" src="img/image_2.png" alt="изображение">
 
         <div class="leftRight">
 
-            <div class="left"></div>
+            <div class="left">
+                <div class="ellipse_7"></div>
+            </div>
 
             <div class="right">
-                <!-- <div id="rect_2"><p>Сделай шаг к<br/> выздоровлению</p></div> -->
+                <div id="rect_2"><p>Сделай шаг к<br/> выздоровлению</p></div>
 
                     <form>
-                        <fieldset>
+                        <fieldset style="border : none">
                             <p class="font_2">ВАШЕ <span>ИМЯ</span></p>
                             <input type="text" value="Алексей">
                             <p class="font_2">ВАШ <span>ТЕЛЕФОН</span></p>
