--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <title>Сделай шаг к выздоровлению</title>
 </head>
 <body>
-
     <div class="form">
-
         <span class="styleFont_1 Reduslim">Reduslim</span>
         <span class="styleFont_1 ECO">ECO</span>
 
@@ -38,11 +36,13 @@
                         <p class="font_2">ВАШЕ <span>ИМЯ</span></p>
                         <input type="text" value="Алексей">
                         <p class="font_2">ВАШ <span>ТЕЛЕФОН</span></p>
-                        <input class="inp_2" type="text" value="+7 (923) 456 78-90">
-                        <select class="language" name="lang">
-                            <option class="ru" value="RU">RU</option>
-                            <option class="uk" value="EN">EN</option>
-                        </select>
+                        <div class="wrapper-lastLine">
+                            <input class="inp_2" type="text" value="+7 (923) 456 78-90">
+                            <select class="select-events" name="lang">
+                                <option class="ru" value="1">RU</option>
+                                <option class="uk" value="0">EN</option>
+                        </div>    
+                            </select>
                     </fieldset>
                 </form>
 
