--- a/index.html
+++ b/index.html
@@ -41,11 +41,20 @@
                             <select class="select-events" name="lang">
                                 <option class="ru" value="1">RU</option>
                                 <option class="uk" value="0">EN</option>
-                        </div>    
                             </select>
+                        </div>
+                        <div class="submit">
+                            <input type="submit" value="Заказать">
+
+                                <svg class="vector" width="18" height="12" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1.5 6H16.5M16.5 6L11.5 1M16.5 6L11.5 11" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+
+                        </div>
+
+
                     </fieldset>
                 </form>
-
 
             </div>
 
