--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                 <form>
                     <fieldset style="border : none">
                         <p class="font_2">ВАШЕ <span>ИМЯ</span></p>
-                        <input type="text" value="Алексей">
+                        <input type="text" value="">
                         <p class="font_2">ВАШ <span>ТЕЛЕФОН</span></p>
                         <div class="wrapper-lastLine">
-                            <input class="inp_2" type="text" value="+7 (923) 456 78-90">
+                            <input class="inp_2" type="text" value="">
                             <select class="select-events" name="lang">
                                 <option class="ru" value="1">RU</option>
                                 <option class="uk" value="0">EN</option>
@@ -59,6 +59,13 @@
             </div>
 
         </div>
+
+        <footer>
+            <p class="trusted">Trusted</p>
+            <p class="secure">Secure</p>
+            <div class="rect_5"></div>
+            <div class="rect_6"></div>
+        </footer>
 
     </div>
 
