прозрачность инпутов, скрипт в форме

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
-    <title>Сделай шаг к выздоровлению</title>
+    <title>Сделай шаг</title>
 </head>
 <body>
     <div class="form">
@@ -28,16 +28,18 @@
             </div>
 
             <div class="right">
-                <div id="rect_2"><p>Сделай шаг к<br/> выздоровлению</p>
+                <div id="rect_2"><p id="test">Сделай шаг к<br/> выздоровлению</p>
                 </div>
 
                 <form>
                     <fieldset style="border : none">
+                        <!-- <p class="name">Алексей</p>
+                        <p class="phone">+7(123)45678-90</p> -->
                         <p class="font_2">ВАШЕ <span>ИМЯ</span></p>
-                        <input type="text" value="">
+                        <input class="inp_1 darrr" type="text" value="Алексей">
                         <p class="font_2">ВАШ <span>ТЕЛЕФОН</span></p>
                         <div class="wrapper-lastLine">
-                            <input class="inp_2" type="text" value="">
+                            <input class="inp_2 darrr" type="text" value="+7(123)456 78-90">
                             <select class="select-events" name="lang">
                                 <option class="ru" value="1">RU</option>
                                 <option class="uk" value="0">EN</option>
